--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,10 @@
             <p>I am a computer science undergraduate with a passion for development. I am a highly motivated and results-oriented individual with a strong track record of success. I am proficient in a variety of programming languages and technologies, and I am always eager to learn new things. I am also a team player and I am able to work effectively under pressure.</p>
 
             <div class="home-sci">
-                <a href="https://linkedin.com/in/pavan-kumar-chappidi-00179a320"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://twitter.com/pavanKumarChap4"><i class='bx bxl-twitter' ></i></a>
-                <a href="https://facebook.com/Pavan Ch"><i class='bx bxl-facebook'></i></a>
-                <a href="https://instagram.com/pavan..kumar_"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://linkedin.com/in/pavan-kumar-chappidi-00179a320"><i class='bx bxl-linkedin"></i></a>
+                <a href="https://twitter.com/pavanKumarChap4"><i class='bx bxl-twitter"></i></a>
+                <a href="https://facebook.com/Pavan Ch"><i class='bx bxl-facebook"></i></a>
+                <a href="https://instagram.com/pavan..kumar_"><i class='bx bxl-instagram"></i></a>
             </div>
 
             <a href="chappidi pavan kumar.pdf" class="btn">Download CV</a>
