--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section id="about">
         <div class="container">
-            <img src="images/chappidi.jpg" alt="Pavan Kumar Chappidi">
+            <img src="chappidi.jpg" alt="Pavan Kumar Chappidi">
             <h1>About Me</h1>
 			<p>I am Pavan Kumar Chappidi.</p>
 			<p>I am Student at Bonam Venkata Chalamayya Engineering College, Odalarevu.</p>
@@ -31,7 +31,7 @@
         <div class="container">
             <h1>My Projects</h1>
             <div class="project">
-                <img src="images/project1.jpg" alt="Project 1">
+                <img src="project1.jpg" alt="Project 1">
                 <h2>Project</h2>
                 <p>A Simple Weather Website </p>
     </section>
@@ -44,7 +44,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Madhu Sai Garlapati. All rights reserved.</p>
+        <p>&copy; 2024 Pavan Kumar Chappidi. All rights reserved.</p>
     </footer>
 </body>
 </html>
